--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,16 +13,15 @@ footer {
     background-color: #68b0ab;
 }
 
-.social-background {
-    background-color: #68b0ab;
-}
-
-
 a:hover {
     color: #68b0ab;
 }
 
 .buy-poetry i {
+    color: #800000;
+}
+
+.newsletter-icon {
     color: #800000;
 }
 
@@ -119,7 +118,7 @@ a {
 
 
 footer {
-    height: 140px;
+    height: 170px;
     margin: 0;
     position: relative;
     bottom: 0;
@@ -129,10 +128,36 @@ footer {
     padding: 20px;
 }
 
+.social-background {
+    background-color: #68b0ab;
+    padding-top: 30px;
+}
+
 .buy-poetry {
     padding-left: 25%;
 }
 
+.subscribe-newsletter {
+    padding-left: 15%;
+}
+
+.newsletter-button {
+    background-color: #800000;
+    color: #f5f4f4;
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+    margin-top: 5%;
+    margin-left: 5%;
+}
+
+.form-border {
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    background-color: #68b0ab;
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+}
 
 
 /*----Homepage */
