--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,15 +25,11 @@ a:hover {
     color: #800000;
 }
 
-.bookshop-links li {
-    color: #f5f4f4;
-}
-
 .bookshop-links a:hover {
     color: #800000;
 }
 .social-icon i {
-    color: #f5f4f4;
+    color: #183946;
 }
 
 /*----General Styles */
@@ -63,7 +59,7 @@ h3 {
 
 h5 {
     font-family: Arial, sans-serif;
-    color: #f5f4f4;
+    color: #183946;
 }
 
 /*----Header */
@@ -219,23 +215,33 @@ footer {
     font-size: 20px;
     color: #f5f4f4;
 }
+
 .search-button {
     background-color: #004A80;
     padding: 7px;
-}
-.caption-test {
-    display: inline-block;
 }
 
 .gallery-size {
     height: 500px;
     width: 500px;
+    
 }
 
+.gallery-size:hover {
+    filter: brightness(0.5);
+}
+
+.btn-hvr:before {
+    display: hidden;
+}
+
+.btn-hvr:hover {
+    display: inline-block;
+}
 
 .image-position {
     padding: 40px 40px 40px 40px;
-    width: 100%;
+    width: auto;
 }
 
 .gallery-caption {
@@ -246,6 +252,14 @@ footer {
     background-color: #f5f4f4;
 }
 
+[class*=" imghvr-"], [class^=imghvr-] {
+    background-color: #f5f4f4;
+}
+
+[class*=" imghvr-"], [class^=imghvr-]:hover {
+    background-color: #bbadad;
+    padding: 0%;
+}
 
 /*----Media Queries */
 
@@ -255,9 +269,6 @@ footer {
     float: right;
     display: block;
   }
-}
-
-@media screen and (max-width: 1150px) {
   .topnav.responsive {position: absolute;}
   .topnav.responsive a.icon {
     position: relative;
@@ -269,11 +280,6 @@ footer {
     display: block;
     text-align: left;
   }
-
-  
-}
-
-@media screen and (max-width: 1150px) {
 .nav-position ul {
     padding: 25% 0px 0px 45%;
     margin: 0px;
@@ -281,12 +287,9 @@ footer {
 .mobile-logo-pos {
     padding-left: 15%;
 }
-}
-
-@media screen and (max-width: 1150px) {
 .mobile-banner {
-        height: 100%;
-        width: 100%;
+        height: 200px;
+        width: auto;
     }
 .quote-box-size {
     padding: 0%;
@@ -308,13 +311,33 @@ footer {
     padding: 50% 0px 0px 50%;
     margin: 0px;
 }
-}
-
-
-@media screen and (max-width: 767px) {
 .footer-padding {
     margin: 0px;
     padding: 0px;
     height: 25%;
 }
+
+h2 {
+    font-size: 16px;
+}
+
+.quote-mobile {
+    padding: 10%;
+}
+
+.mobile-search {
+    padding-left: 10%;
+    padding-bottom: 10%;
+}
+
+.mobile-gallery {
+    max-height: 250px;
+    padding: 5% 4% 2% 2%;
+    margin: 0%;
+}
+
+h3 {
+    font-size: 90%;
+}
+
 }
