--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,19 +2,19 @@
 
 
 header {
-    background-color: #f5f4f4;
+    background-color: #91C7B1;
 }
 
 .nav-background {
-    background-color: #f5f4f4;
+    background-color: #91C7B1;
 }
 
 footer {
-    background-color: #68b0ab;
+    background-color: #91C7B1;
 }
 
 a:hover {
-    color: #68b0ab;
+    color: #800000;
 }
 
 .buy-poetry i {
@@ -29,8 +29,13 @@ a:hover {
     color: #800000;
 }
 .social-icon i {
-    color: #183946;
+    color: #800000;
 }
+
+.gallery-background {
+    background-color: #D6CCC2;
+}
+
 
 /*----General Styles */
 body {
@@ -47,19 +52,25 @@ h2 {
     font-family: Trocchi, sans-serif;
     font-size: 30px;
     font-style: italic;
-    color: #f5f4f4;
+    color: #D6CCC2;
 }
 
 h3 {
     font-family: Open sans, sans-serif;
     font-weight: 600;
     text-transform: uppercase;
-    color: #004A80; 
+    color: #293F14; 
+}
+
+h4 {
+    font-family: Open sans, sans-serif;
+    font-weight: 400;
+    font-size: 16px;
 }
 
 h5 {
     font-family: Arial, sans-serif;
-    color: #183946;
+    color: #02033C;
 }
 
 /*----Header */
@@ -68,12 +79,8 @@ h5 {
     margin: 0px;
 }
 
-.sticky-header {
-    position: sticky;
-}
-
 .nav-position ul {
-padding: 75px 100px;
+    padding: 75px 100px;
     margin: 0px; 
 }
 
@@ -88,7 +95,7 @@ padding: 75px 100px;
     font-size: 20px;
     text-align: center;
     padding: 2px 30px;
-    background-color: #68b0ab;
+    background-color: #800000;
     border-radius: 25px;
 }
 
@@ -120,7 +127,7 @@ a {
 
 .icon {
     font-size: 30px;
-    color: #68b0ab;
+    color: #800000;
 }
 
 .topnav .icon {
@@ -131,7 +138,7 @@ a {
 
 
 footer {
-    height: 170px;
+    height: 250px;
     margin: 0px;
     position: relative;
     padding-bottom: 0px;
@@ -142,13 +149,13 @@ footer {
 }
 
 .social-background {
-    background-color: #68b0ab;
-    margin-top: 30px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
+    background-color: #91C7B1;
+    margin-bottom: 0%;
+    padding-bottom: 0%;
 }
 
 .buy-poetry {
+    
     padding-left: 25%;
     padding-bottom: 0%;
 }
@@ -170,9 +177,13 @@ footer {
     border-top: none;
     border-right: none;
     border-left: none;
-    background-color: #68b0ab;
+    background-color: #91C7B1;
     font-family: Arial, sans-serif;
     font-size: 18px;
+}
+
+.footer-extra {
+    padding-top: 2%;
 }
 
 
@@ -188,37 +199,13 @@ footer {
 }
 
 .quote-background {
-    background-color: rgb(161, 84, 83);
+    background-color: #800000;
     position: relative;
 }
 
 .quote-box-size {
     padding: 5% 1% 5% 2%;
     position: relative;
-}
-
-.searchbar-box {
-    padding: 8% 0% 0% 15%;
-    
-    
-}
-
-.searchbar-box input[type=text] {
-    padding: 10px;
-  font-size: 15px;
-  border: 1px solid grey;
-  width: 70%;
-  background: #f1f1f1;
-}
-
-.search-icon {
-    font-size: 20px;
-    color: #f5f4f4;
-}
-
-.search-button {
-    background-color: #004A80;
-    padding: 7px;
 }
 
 .gallery-size {
@@ -231,34 +218,20 @@ footer {
     filter: brightness(0.5);
 }
 
-.btn-hvr:before {
-    display: hidden;
-}
-
-.btn-hvr:hover {
-    display: inline-block;
-}
-
 .image-position {
     padding: 40px 40px 40px 40px;
-    width: auto;
+    width: 100%;
 }
 
 .gallery-caption {
     text-align: center;
 }
 
-.gallery-background {
-    background-color: #f5f4f4;
-}
 
-[class*=" imghvr-"], [class^=imghvr-] {
-    background-color: #f5f4f4;
-}
+/*----About Page */
 
-[class*=" imghvr-"], [class^=imghvr-]:hover {
-    background-color: #bbadad;
-    padding: 0%;
+.about-size {
+    padding: 7% 10% 7% 10%;
 }
 
 /*----Media Queries */
@@ -287,22 +260,21 @@ footer {
 .mobile-logo-pos {
     padding-left: 15%;
 }
-.mobile-banner {
-        height: 200px;
-        width: auto;
-    }
+
 .quote-box-size {
-    padding: 0%;
+    padding-left: 7%;
+    padding-bottom: 0%
 }    
 .searchbar-box {
-    padding: 0%;
+    padding-left: 10%;
+    padding-bottom: 7%;
 }
 }
 
 @media screen and (max-width: 799px) {
 #footer-details{
-    height: 200%;
-    padding: 10%;
+    height: 150%;
+    padding: 5%;
 }
 }
 
@@ -317,8 +289,33 @@ footer {
     height: 25%;
 }
 
+a {
+    font-size: 17px;
+}
+
 h2 {
+    font-size: 17px;
+}
+
+h3 {
+    font-size: 90%;
+    text-align: center;
+}
+
+h5 {
     font-size: 16px;
+}
+
+.newsletter-button {
+    font-size: 16px;
+}
+
+.subscribe-newsletter {
+    padding-left: 5%;
+}
+
+.mobile-email {
+    max-width: 3%;
 }
 
 .quote-mobile {
@@ -334,10 +331,6 @@ h2 {
     max-height: 250px;
     padding: 5% 4% 2% 2%;
     margin: 0%;
-}
-
-h3 {
-    font-size: 90%;
 }
 
 }
