--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ a:hover {
 }
 
 .gallery-background {
-    background-color: #E5E8F0;
+    background-color: #252D41;
 }
 
 
@@ -232,7 +232,7 @@ footer {
 /*----Poem Page */
 
 .galway-po {
-    padding: 10% 0% 10% 10%;
+    padding: 10% 0% 5% 10%;
 }
 
 .poetry-background {
@@ -245,25 +245,29 @@ h3.poetry-title  {
 }
 
 .image-position-po {
-    padding: 25% 10% 25% 2%;
+    padding: 25% 10% 15% 2%;
     width: 100%;
 }
 
 .image-position-bio {
-    padding: 3% 5% 0% 25%;
-    width: 50%;
+    padding: 2% 5% 10% 20%;
+    width: 75%;
+}
+
+.bio {
+    padding-right: 10%;
 }
 
 /*----Media Queries */
 
 @media screen and (max-width: 1023px) {
 .mobile-nav {
-    padding-left: 40%;
-    padding-top: 10%;
+    padding: 2% 0% 2% 37%;
+    
 }
  
 .nav-position {
-    padding: 15% 40% 0% 0%;
+    padding: 5% 40% 0% 2%;
     margin: 0%;
 }    
   
@@ -272,7 +276,7 @@ h3.poetry-title  {
     margin: 0px;
 }
 .mobile-logo-pos {
-    padding-left: 15%;
+    padding: 5% 0% 0% 65%;
 }
 
 .mobile-banner {
@@ -296,6 +300,10 @@ h3 {
     font-size: 18px;
 }
 
+h4 {
+    font-size: 16px;
+}
+
 .mobile-gallery {
     max-height: 200px;
     max-width: 90%;
@@ -309,26 +317,48 @@ h3 {
 }
 
 .mobile-caption {
-    max-width: 90%;
+    max-width: 90%;   
+}
+
+.galway-po {
+    padding: 5% 0% 5% 5%;
 }
 }
 
-@media screen and (max-width: 799px) {
+@media screen and (max-width: 736px) {
+.galway-po {
+    padding-left: 25%;
+    padding-bottom: 0%;
+}
+
+.mobile-image-po {
+    padding-top: 0%;
+    padding-left: 10%;
+}
+
+.image-position-bio {
+    padding-top: 7%;
+    padding-bottom: 5%;
+}
+
+.bio {
+    padding-left: 5%;
+}
+
 #footer-details{
     height: 150%;
     padding: 5%;
 }
 
-.mobile-logo-pos {
-    padding-left: 10%;    
-
-}
 }
 
 @media screen and (max-width: 414px) {
+.mobile-logo-pos {
+    padding: 5% 0% 0% 40%;
+}  
+
 .mobile-nav {
-    padding-top: 0%;
-    padding-left: 30%;
+    padding: 0% 0% 2% 30%;
     background-color: #91C7B1;
 }
 
@@ -352,8 +382,12 @@ h2 {
 }
 
 h3 {
-    font-size: 90%;
+    font-size: 18px;
     text-align: center;
+}
+
+h4 {
+    font-size: 16px;
 }
 
 h5 {
@@ -382,5 +416,20 @@ h5 {
 .mobile-caption {
     max-width: 100%;
 }
+
+.galway-po {
+    padding-left: 5%;
+    padding-bottom: 2%;
+}
+
+.image-position-bio {
+    padding: 15% 0% 15% 20%;
+}
+
+.mobile-image-po {
+    padding-left: 10%;
+    padding-top: 5%;
+}
+
 
 }
