--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,8 +32,23 @@ a:hover {
     color: #800000;
 }
 
+.nav-icon{
+    color: #800000;
+}
+
 .gallery-background {
     background-color: #252D41;
+}
+
+.poetry-background {
+    background-color: #E5E8F0;
+}
+
+hr {
+    display: block;
+    background-color: #02033C;
+    margin: 0%;
+    border-width: 0.5px;
 }
 
 
@@ -122,10 +137,6 @@ a {
   color: black;
 }
 
-.nav-icon{
-    color: #800000;
-}
-
 .icon {
     font-size: 30px;
     color: #800000;
@@ -141,8 +152,8 @@ footer {
     padding-bottom: 0px;
 }
 
-#footer-details {
-    padding: 20px;
+.footer-padding {
+    padding-top: 5%;
 }
 
 .social-background {
@@ -166,7 +177,7 @@ footer {
     color: #f5f4f4;
     font-family: Arial, sans-serif;
     font-size: 18px;
-    padding-top: 2%;
+    position: relative;
 }
 
 .form-border {
@@ -176,10 +187,6 @@ footer {
     background-color: #91C7B1;
     font-family: Arial, sans-serif;
     font-size: 18px;
-}
-
-.footer-extra {
-    padding-top: 2%;
 }
 
 
@@ -235,10 +242,6 @@ footer {
     padding: 10% 0% 5% 10%;
 }
 
-.poetry-background {
-    background-color: #E5E8F0;
-}
-
 h3.poetry-title  {
     color: #800000;
     font-weight: 700;
@@ -260,6 +263,36 @@ h3.poetry-title  {
 
 /*----Media Queries */
 
+@media screen and (max-width: 1024px) {
+
+.newsletter-button {
+    font-size: 16px;
+    padding: 1%;
+}
+
+.newsletter-mobile {
+    padding-left: 35%;
+}
+
+.footer-form-mobile {
+    padding-left: 35%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+.buy-poetry {
+    padding-left: 40%;
+}
+
+.bookshop-links {
+    padding-left: 35%;
+}
+
+.social-footer-mobile {
+    padding-left: 35%;
+}
+}
+
 @media screen and (max-width: 1023px) {
 .mobile-nav {
     padding: 2% 0% 2% 37%;
@@ -275,8 +308,40 @@ h3.poetry-title  {
     padding: 0px;
     margin: 0px;
 }
+
 .mobile-logo-pos {
     padding: 5% 0% 0% 65%;
+}
+
+.footer-padding {
+    padding-top: 2%;
+}
+
+.newsletter-button {
+    font-size: 16px;
+    padding: 1%;
+}
+
+.newsletter-mobile {
+    padding-left: 25%;
+}
+
+.footer-form-mobile {
+    padding-left: 20%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+.buy-poetry {
+    padding-left: 30%;
+}
+
+.bookshop-links {
+    padding-left: 20%;
+}
+
+.social-footer-mobile {
+    padding-left: 25%;
 }
 
 .mobile-banner {
@@ -369,8 +434,35 @@ h4 {
 
 .footer-padding {
     margin: 0px;
-    padding: 0px;
+    padding-top: 2%;
     height: 25%;
+}
+
+.newsletter-button {
+    font-size: 16px;
+    padding: 2%;
+}
+
+.newsletter-mobile {
+    padding-left: 25%;
+}
+
+.footer-form-mobile {
+    padding-left: 2%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+.buy-poetry {
+    padding-left: 15%;
+}
+
+.bookshop-links {
+    padding-left: 10%;
+}
+
+.social-footer-mobile {
+    padding-left: 10%;
 }
 
 a {
