--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,6 +261,12 @@ h3.poetry-title  {
     padding-right: 10%;
 }
 
+/*----Contact Page */
+h3.form-font {
+    text-transform: capitalize;
+    font-size: 16px;
+}
+
 /*----Media Queries */
 
 @media screen and (max-width: 1024px) {
