Added bootstrap accordion to the About Page. Started styling the accordion. Worked on styling the About infomration on the page too

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,9 +246,17 @@ footer {
 /*----About Page */
 
 .about-size {
-    padding: 7% 10% 7% 10%;
+    padding: 7% 15% 5% 15%;
 }
 
+.faq-btn {
+    background-color: #02033C;
+}
+
+.faq-font {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #91C7B1;
+}
 /*----Poem Page */
 
 .galway-po {
