--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,13 +44,6 @@ a:hover {
     background-color: #E5E8F0;
 }
 
-hr {
-    display: block;
-    background-color: #02033C;
-    margin: 0%;
-    border-width: 0.5px;
-}
-
 
 /*----General Styles */
 body {
@@ -96,6 +89,14 @@ h5 {
 
 .quote-position {
     padding-left: 30%;
+}
+
+hr {
+    background-color: #252D41;
+    color: #E5E8F0;
+    margin: 0;
+    border: 0;
+    height: 1px; 
 }
 
 /*----Header */
@@ -249,6 +250,10 @@ footer {
     padding: 7% 15% 5% 15%;
 }
 
+.faq-size {
+    padding: 2% 15% 7% 15%;
+}
+
 .faq-btn {
     background-color: #02033C;
 }
@@ -280,6 +285,7 @@ h3.poetry-title  {
 
 .bio {
     padding-right: 10%;
+    padding-bottom: 10%;
 }
 
 .bio-top {
