--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,15 +2,15 @@
 
 
 header {
-    background-color: #91C7B1;
+    background-color: #8DB2B9;
 }
 
 .nav-background {
-    background-color: #91C7B1;
+    background-color: #8DB2B9;
 }
 
 footer {
-    background-color: #91C7B1;
+    background-color: #8DB2B9;
 }
 
 a:hover {
@@ -28,6 +28,11 @@ a:hover {
 .bookshop-links a:hover {
     color: #800000;
 }
+
+li a i:hover {
+    color: #252D41;
+}
+
 .social-icon i {
     color: #800000;
 }
@@ -72,7 +77,7 @@ h3 {
     font-family: Open sans, sans-serif;
     font-weight: 600;
     text-transform: uppercase;
-    color: #91C7B1; 
+    color: #8DB2B9; 
 }
 
 h4 {
@@ -84,19 +89,11 @@ h4 {
 
 h5 {
     font-family: Arial, sans-serif;
-    color: #02033C;
+    color: #252D41;
 }
 
 .quote-position {
     padding-left: 30%;
-}
-
-hr {
-    background-color: #252D41;
-    color: #E5E8F0;
-    margin: 0;
-    border: 0;
-    height: 1px; 
 }
 
 /*----Header */
@@ -106,13 +103,14 @@ hr {
 }
 
 .nav-position ul {
-    padding: 75px 100px;
+    padding: 50px 100px;
     margin: 0px; 
 }
 
-.logo-max {
-    max-width: 220px;
-    margin: 0px;
+.logo img {
+    height: 140px;
+    padding-left: 75px;
+    padding-top: 10px;
 }
 
 
@@ -156,18 +154,18 @@ a {
 
 
 footer {
-    height: 250px;
+    height: 175px;;
     margin: 0px;
     position: relative;
     padding-bottom: 0px;
 }
 
 .footer-padding {
-    padding-top: 5%;
+    padding-top: 3%;
 }
 
 .social-background {
-    background-color: #91C7B1;
+    background-color: #8DB2B9;
     margin-bottom: 0%;
     padding-bottom: 0%;
 }
@@ -194,7 +192,7 @@ footer {
     border-top: none;
     border-right: none;
     border-left: none;
-    background-color: #91C7B1;
+    background-color: #8DB2B9;
     font-family: Arial, sans-serif;
     font-size: 18px;
 }
@@ -205,7 +203,7 @@ footer {
     background-image: url(/assets/images/galway-banner.jpg);
     background-position: center bottom;
     background-size: contain;
-    height: 700px;
+    height: 400px;
     width: 100%;
     margin: 0;
 }
@@ -255,12 +253,12 @@ footer {
 }
 
 .faq-btn {
-    background-color: #02033C;
+    background-color: #252D41;
 }
 
 .faq-font {
     font-family: Arial, Helvetica, sans-serif;
-    color: #91C7B1;
+    color: #8DB2B9;
 }
 /*----Poem Page */
 
@@ -271,6 +269,12 @@ footer {
 h3.poetry-title  {
     color: #800000;
     font-weight: 700;
+}
+
+h3.bio-title {
+    color: #800000;
+    font-weight: 700;
+    font-size: 18px;
 }
 
 .image-position-po {
@@ -306,8 +310,12 @@ h3.form-font {
     padding: 8% 10% 0% 10%;
 }
 
-#email-label {
+.email-label {
     padding-left: 6%;
+}
+
+.input-padding {
+    padding-right: 19%;
 }
 
 /*----Media Queries */
