--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,9 +108,9 @@ h5 {
 }
 
 .logo img {
-    height: 140px;
-    padding-left: 75px;
-    padding-top: 10px;
+    height: 150px;
+    padding-left: 80px;
+    padding-top: 3px;
 }
 
 
@@ -167,7 +167,7 @@ footer {
 .social-background {
     background-color: #8DB2B9;
     margin-bottom: 0%;
-    padding-bottom: 0%;
+    padding: 2% 0% 0% 7%;
 }
 
 .buy-poetry {
@@ -195,6 +195,7 @@ footer {
     background-color: #8DB2B9;
     font-family: Arial, sans-serif;
     font-size: 18px;
+    padding-top: 2%;
 }
 
 
@@ -370,16 +371,20 @@ h3.form-font {
 }    
   
 .nav-position ul {
-    padding: 0px;
-    margin: 0px;
+    padding: 0%;
 }
 
 .mobile-logo-pos {
-    padding: 5% 0% 0% 65%;
+    height: 100px;
+    padding: 5% 0% 0% 50%;
 }
 
-.footer-padding {
-    padding-top: 2%;
+.mobile-nav-btn {
+    padding-right: 20%;
+}
+
+footer {
+    height: 200px;
 }
 
 .newsletter-button {
@@ -388,25 +393,35 @@ h3.form-font {
 }
 
 .newsletter-mobile {
-    padding-left: 25%;
+    padding-left: 18%;
 }
 
 .footer-form-mobile {
-    padding-left: 20%;
+    padding-left: 10%;
     padding-top: 2%;
     padding-bottom: 2%;
 }
 
 .buy-poetry {
-    padding-left: 30%;
+    padding-left: 10%;
 }
 
 .bookshop-links {
-    padding-left: 20%;
+    padding-left: 15%;
 }
 
 .social-footer-mobile {
-    padding-left: 25%;
+    padding-left: 30%;
+}
+
+.newsletter-tablet-pos {
+    padding-top: 2%;
+    padding-right: 4%;
+}
+
+.links-tablet-pos {
+    padding-right: 8%;
+    padding-top: 2%;
 }
 
 .mobile-banner {
@@ -451,7 +466,7 @@ p {
 }
 
 .mobile-caption {
-    max-width: 90%;   
+    max-width: 88%;   
 }
 
 .galway-po {
@@ -498,17 +513,21 @@ p {
 
 @media screen and (max-width: 414px) {
 .mobile-logo-pos {
-    padding: 5% 0% 0% 40%;
+    padding: 5% 0% 0% 5%;
 }  
 
 .mobile-nav {
     padding: 0% 0% 2% 30%;
-    background-color: #91C7B1;
+    background-color: #8DB2B9;
 }
 
 .nav-position ul {
-    padding: 0px;
+    padding-left: 8%;
     margin: 0px;
+}
+
+.mobile-nav-btn {
+    padding-right: 35%;
 }
 
 .footer-padding {
@@ -523,17 +542,18 @@ p {
 }
 
 .newsletter-mobile {
-    padding-left: 25%;
+    padding-left: 28%;
 }
 
 .footer-form-mobile {
     padding-left: 2%;
     padding-top: 2%;
-    padding-bottom: 2%;
+    padding-bottom: 3%;
 }
 
 .buy-poetry {
     padding-left: 15%;
+    padding-top: 3%;
 }
 
 .bookshop-links {
@@ -541,7 +561,8 @@ p {
 }
 
 .social-footer-mobile {
-    padding-left: 10%;
+    padding-left: 2%;
+    padding-top: 4%;
 }
 
 a {
