--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,134 +2,146 @@
 
 
 header {
-    background-color: #8DB2B9;
+  background-color: #8DB2B9;
 }
 
 .nav-background {
-    background-color: #8DB2B9;
+  background-color: #8DB2B9;
 }
 
 footer {
-    background-color: #8DB2B9;
+  background-color: #8DB2B9;
 }
 
 a:hover {
-    color: #800000;
+  color: #800000;
 }
 
 .buy-poetry i {
-    color: #800000;
+  color: #800000;
 }
 
 .newsletter-icon {
-    color: #800000;
+  color: #800000;
 }
 
 .bookshop-links a:hover {
-    color: #800000;
+  color: #800000;
 }
 
 li a i:hover {
-    color: #252D41;
+  color: #252D41;
 }
 
 .social-icon i {
-    color: #800000;
+  color: #800000;
 }
 
-.nav-icon{
-    color: #800000;
+.nav-icon {
+  color: #800000;
 }
 
 .gallery-background {
-    background-color: #252D41;
+  background-color: #252D41;
 }
 
 .poetry-background {
-    background-color: #DBF3FD63
+  background-color: #DBF3FD63;
+}
+
+.contact-email {
+  color: #E5E8F0;
+}
+
+.contact-email:hover {
+    color: #8DB2B9;
 }
 
 
 /*----General Styles */
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 p {
-    font-family: Arial, Helvetica, sans-serif;
-    color: #E5E8F0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #E5E8F0;
 }
 
 h1 {
-    visibility: hidden;
-    font-size: 3px;
+  visibility: hidden;
+  font-size: 3px;
 }
 
 h2 {
-    font-family: Trocchi, sans-serif;
-    font-size: 30px;
-    font-style: italic;
-    color: #E5E8F0;
+  font-family: Trocchi, sans-serif;
+  font-size: 30px;
+  font-style: italic;
+  color: #E5E8F0;
 }
 
 h3 {
-    font-family: Open sans, sans-serif;
-    font-weight: 600;
-    text-transform: uppercase;
-    color: #8DB2B9; 
+  font-family: Open sans, sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #8DB2B9;
 }
 
 h4 {
-    font-family: Open sans, sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
+  font-family: Open sans, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 h5 {
-    font-family: Arial, sans-serif;
-    color: #252D41;
+  font-family: Arial, sans-serif;
+  color: #252D41;
 }
 
 .quote-position {
-    padding-left: 30%;
+  padding-left: 30%;
 }
 
 /*----Header */
 
 .row {
-    margin: 0px;
+  margin: 0px;
+}
+
+.header-height {
+    height: 140px;
 }
 
 .nav-position ul {
-    padding: 50px 100px;
-    margin: 0px; 
+  padding: 45px 50px;
+  margin: 0px;
 }
 
-.logo img {
-    height: 150px;
-    padding-left: 80px;
-    padding-top: 3px;
+.logo {
+  height: 59px;
+  width: 180px;
+  padding-top: 45px;
+  padding-left: 55px;
 }
-
 
 .nav-button {
-    font-family: Arial, sans-serif;
-    font-size: 20px;
-    text-align: center;
-    padding: 2px 30px;
-    background-color: #E5E8F0;
-    border-radius: 25px;
+  font-family: Arial, sans-serif;
+  font-size: 20px;
+  text-align: center;
+  padding: 2px 30px;
+  background-color: #E5E8F0;
+  border-radius: 25px;
 }
 
 ul {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 li .nav-button {
-    margin-left: 10%;
+  margin-left: 5%;
 }
 
 li {
@@ -140,531 +152,529 @@ li {
 }
 
 a {
-  
   padding: 10px;
   color: black;
 }
 
 .icon {
-    font-size: 30px;
-    color: #800000;
+  font-size: 30px;
+  color: #800000;
 }
 
 /*----Footer*/
 
 
 footer {
-    height: 175px;;
+  height: 175px;
+  ;
     margin: 0px;
-    position: relative;
-    padding-bottom: 0px;
+  position: relative;
+  padding-bottom: 0px;
 }
 
 .footer-padding {
-    padding-top: 3%;
+  padding-top: 3%;
 }
 
 .social-background {
-    background-color: #8DB2B9;
-    margin-bottom: 0%;
-    padding: 2% 0% 0% 7%;
+  background-color: #8DB2B9;
+  margin-bottom: 0%;
+  padding: 2% 0% 0% 7%;
 }
 
 .buy-poetry {
-    
-    padding-left: 25%;
-    padding-bottom: 0%;
+  padding-left: 25%;
+  padding-bottom: 0%;
 }
 
 .subscribe-newsletter {
-    padding-left: 15%;
+  padding-left: 15%;
 }
 
 .newsletter-button {
-    background-color: #800000;
-    color: #f5f4f4;
-    font-family: Arial, sans-serif;
-    font-size: 18px;
-    position: relative;
+  background-color: #800000;
+  color: #f5f4f4;
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+  position: relative;
 }
 
 .form-border {
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    background-color: #8DB2B9;
-    font-family: Arial, sans-serif;
-    font-size: 18px;
-    padding-top: 2%;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  background-color: #8DB2B9;
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+  padding-top: 2%;
 }
 
 
 /*----Homepage */
 .home-banner {
-    background-image: url(/assets/images/galway-banner.jpg);
-    background-position: center bottom;
-    background-size: contain;
-    height: 400px;
-    width: 100%;
-    margin: 0;
+  background-image: url(/assets/images/galway-banner.jpg);
+  background-position: center bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 450px;
+  width: 100%;
+  margin: 0;
 }
 
 .quote-background {
-    background-color: #800000;
-    position: relative;
+  background-color: #800000;
+  position: relative;
 }
 
 .quote-box-size {
-    padding: 5% 1% 5% 2%;
-    position: relative;
+  padding: 5% 1% 5% 2%;
+  position: relative;
 }
 
 .gallery-size {
-    height: 500px;
-    width: 500px;
-    
+  height: 500px;
+  width: 500px;
+  object-fit: cover;
 }
 
 .gallery-size:hover {
-    filter: brightness(0.5);
+  filter: brightness(0.5);
 }
 
 .image-position {
-    padding: 40px 40px 40px 40px;
-    width: 100%;
+  padding: 40px 40px 40px 40px;
+  width: 100%;
 }
 
 .gallery-caption {
-    text-align: center;
+  text-align: center;
 }
 
 .bottom-padding {
-    padding-bottom: 10%;
+  padding-bottom: 10%;
 }
 
 
 /*----About Page */
 
 .about-size {
-    padding: 7% 15% 5% 15%;
+  padding: 7% 15% 5% 15%;
 }
 
 .faq-size {
-    padding: 2% 15% 7% 15%;
+  padding: 2% 15% 7% 15%;
 }
 
 .faq-btn {
-    background-color: #252D41;
+  background-color: #252D41;
 }
 
 .faq-font {
-    font-family: Arial, Helvetica, sans-serif;
-    color: #8DB2B9;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #8DB2B9;
 }
 /*----Poem Page */
 
 .galway-po {
-    padding: 2% 0% 5% 15%;
+  padding: 2% 0% 5% 15%;
 }
 
-h3.poetry-title  {
-    color: #800000;
-    font-weight: 700;
+h3.poetry-title {
+  color: #800000;
+  font-weight: 700;
 }
 
 h3.bio-title {
-    color: #800000;
-    font-weight: 700;
-    font-size: 18px;
+  color: #800000;
+  font-weight: 700;
+  font-size: 18px;
 }
 
 .image-position-po {
-    padding: 30% 10% 15% 2%;
-    width: 100%;
+  padding: 30% 10% 15% 2%;
+  width: 100%;
 }
 
 .image-position-po2 {
-    padding: 10% 10% 15% 2%;
-    width: 100%;
+  padding: 10% 10% 15% 2%;
+  width: 100%;
 }
 
 .image-position-bio {
-    padding: 2% 5% 20% 25%;
-    width: 75%;
+  padding: 2% 5% 20% 25%;
+  width: 75%;
 }
 
 .bio {
-    padding-right: 10%;
+  padding-right: 10%;
 }
 
 /*----Contact Page */
 h3.form-font {
-    text-transform: none;
-    font-size: 16px;
+  text-transform: none;
+  font-size: 16px;
 }
 
 .contact-form {
-    padding: 5% 0% 5% 10%;
+  padding: 5% 0% 5% 10%;
 }
 
 .contact-us {
-    padding: 8% 10% 0% 10%;
+  padding: 8% 10% 0% 10%;
 }
 
 .email-label {
-    padding-left: 6%;
+  padding-left: 6%;
 }
 
 .input-padding {
-    padding-right: 19%;
+  padding-right: 19%;
 }
 
-.contact-email {
-    color: #E5E8F0;
+.label-display {
+    display: block;
 }
 
 /*-----Shop Page */
 
 .shop-image {
-    max-height: 75%;
-    max-width: 75%;
-    padding-top: 15%;
-    padding-left: 25%;
+  max-height: 75%;
+  max-width: 75%;
+  padding-top: 15%;
+  padding-left: 25%;
 }
 
 .shop-text {
-    padding-top: 5%;
-    padding-left: 25%;
+  padding-top: 5%;
+  padding-left: 25%;
 }
 
 .shop-button {
-    padding: 2% 0% 15% 25%;
+  padding: 2% 0% 15% 25%;
 }
 
 /*----Media Queries */
 
 @media screen and (max-width: 1024px) {
 
-.mobile-bottom-padding {
+  .mobile-bottom-padding {
     padding-bottom: 0%;
-} 
+  }
 
-.quote-position {
+  .quote-position {
     padding-left: 5%;
-}
+  }
 
-.newsletter-button {
+  .newsletter-button {
     font-size: 16px;
     padding: 1%;
-}
+  }
 
-.newsletter-mobile {
+  .newsletter-mobile {
     padding-left: 35%;
-}
+  }
 
-.footer-form-mobile {
+  .footer-form-mobile {
     padding-left: 35%;
     padding-top: 2%;
     padding-bottom: 2%;
-}
+  }
 
-.buy-poetry {
+  .buy-poetry {
     padding-left: 40%;
-}
+  }
 
-.bookshop-links {
+  .bookshop-links {
     padding-left: 35%;
-}
+  }
 
-.social-footer-mobile {
+  .social-footer-mobile {
     padding-left: 35%;
-}
+  }
 }
 
 @media screen and (max-width: 1023px) {
-.mobile-nav {
-    padding: 2% 0% 2% 37%;
-    
-}
- 
-.nav-position {
-    padding: 5% 40% 0% 2%;
+  .mobile-nav {
+    padding: 15% 0% 0% 40%;
+  }
+
+  .nav-position {
+    padding: 17% 0% 0% 40%;
     margin: 0%;
-}    
-  
-.nav-position ul {
+    background-color: #8DB2B9;
+  }
+
+  .nav-position ul {
     padding: 0%;
-}
+  }
 
-.mobile-logo-pos {
-    height: 100px;
-    padding: 5% 0% 0% 50%;
-}
+  .mobile-logo-pos {
+    height: 75px;
+    padding: 2% 0% 5% 5%;
+  }
 
-.mobile-nav-btn {
+  .mobile-nav-btn {
     padding-right: 20%;
-}
+  }
 
-footer {
-    height: 200px;
-}
+  footer {
+    height: 220px;
+  }
 
-.newsletter-button {
+  .newsletter-button {
     font-size: 16px;
     padding: 1%;
-}
+  }
 
-.newsletter-mobile {
+  .newsletter-mobile {
     padding-left: 18%;
-}
+  }
 
-.footer-form-mobile {
+  .footer-form-mobile {
     padding-left: 10%;
     padding-top: 2%;
     padding-bottom: 2%;
-}
+  }
 
-.buy-poetry {
+  .buy-poetry {
     padding-left: 10%;
-}
+  }
 
-.bookshop-links {
+  .bookshop-links {
     padding-left: 15%;
-}
+  }
 
-.social-footer-mobile {
+  .social-footer-mobile {
     padding-left: 30%;
-}
+  }
 
-.newsletter-tablet-pos {
+  .newsletter-tablet-pos {
     padding-top: 2%;
     padding-right: 4%;
-}
+  }
 
-.links-tablet-pos {
+  .links-tablet-pos {
     padding-right: 8%;
     padding-top: 2%;
-}
+  }
 
-.mobile-banner {
+  .mobile-banner {
     background-image: url(/assets/images/galway-banner2.jpg);
     background-position: center center;
     background-size: cover;
     height: 300px;
     width: 100%;
-}
+  }
 
-.quote-box-size {
+  .quote-box-size {
     padding: 7%;
+  }
 
-}    
-
-h2 {
+  h2 {
     font-size: 20px;
-}
+  }
 
-h3 {
+  h3 {
     font-size: 18px;
-}
+  }
 
-h4 {
+  h4 {
     font-size: 16px;
-}
+  }
 
-p {
+  p {
     font-size: 16px;
-}
+  }
 
-.mobile-gallery {
+  .mobile-gallery {
     max-height: 200px;
     max-width: 90%;
     padding: 5%;
     margin: 0%;
-}
+  }
 
-.gallery-caption {
+  .gallery-caption {
     overflow: auto;
     text-align: center;
-}
+  }
 
-.mobile-caption {
-    max-width: 88%;   
-}
+  .mobile-caption {
+    max-width: 88%;
+  }
 
-.galway-po {
+  .galway-po {
     padding: 5% 0% 5% 5%;
-}
+  }
 
-.contact-form {
+  .contact-form {
     flex-direction: column-reverse;
     padding-right: 10%;
-}
+  }
 
-.contact-us {
+  .contact-us {
     padding-bottom: 10%;
-    
-}
+  }
 }
 
 @media screen and (max-width: 736px) {
-.galway-po {
+  .galway-po {
     padding-left: 25%;
     padding-bottom: 0%;
-}
+  }
 
-.mobile-image-po {
+  .mobile-image-po {
     padding-top: 0%;
     padding-left: 10%;
-}
+  }
 
-.image-position-bio {
+  .image-position-bio {
     padding-top: 7%;
     padding-bottom: 5%;
-}
+  }
 
-.bio {
+  .bio {
     padding-left: 5%;
-}
+  }
 
-#footer-details{
+  #footer-details {
     height: 150%;
     padding: 5%;
-}
-
+  }
 }
 
 @media screen and (max-width: 414px) {
-.mobile-logo-pos {
-    padding: 5% 0% 0% 5%;
-}  
+  .mobile-logo-pos {
+    padding-right: 5%;
+    float: right;
+    height: 50px;
+  }
 
-.mobile-nav {
-    padding: 0% 0% 2% 30%;
+  .mobile-nav {
+    padding-top: 15%;
+    padding-right: 12%;
     background-color: #8DB2B9;
-}
+  }
 
-.nav-position ul {
-    padding-left: 8%;
+  .nav-position ul {
+    padding-right: 5%;
     margin: 0px;
-}
+  }
 
-.mobile-nav-btn {
+  .mobile-nav-btn {
     padding-right: 35%;
-}
+  }
 
-.footer-padding {
+  .footer-padding {
     margin: 0px;
     padding-top: 2%;
     height: 25%;
-}
+  }
 
-.newsletter-button {
+  .newsletter-button {
     font-size: 16px;
     padding: 2%;
-}
+  }
 
-.newsletter-mobile {
+  .newsletter-mobile {
     padding-left: 28%;
-}
+  }
 
-.footer-form-mobile {
+  .footer-form-mobile {
     padding-left: 2%;
     padding-top: 2%;
     padding-bottom: 3%;
-}
+  }
 
-.buy-poetry {
+  .buy-poetry {
     padding-left: 15%;
     padding-top: 3%;
-}
+  }
 
-.bookshop-links {
+  .bookshop-links {
     padding-left: 10%;
-}
+  }
 
-.social-footer-mobile {
+  .social-footer-mobile {
     padding-left: 2%;
     padding-top: 4%;
-}
+  }
 
-a {
+  a {
     font-size: 17px;
-}
+  }
 
-h2 {
+  h2 {
     font-size: 17px;
-}
+  }
 
-h3 {
+  h3 {
     font-size: 24px;
     text-align: center;
-}
+  }
 
-h4 {
+  h4 {
     font-size: 16px;
-}
+  }
 
-h5 {
+  h5 {
     font-size: 16px;
-}
+  }
 
-p {
+  p {
     font-size: 15px;
-}
+  }
 
-h2.mobile-heading {
+  h2.mobile-heading {
     font-size: 20px;
-}
+  }
 
-.newsletter-button {
+  .newsletter-button {
     font-size: 16px;
-}
+  }
 
-.subscribe-newsletter {
+  .subscribe-newsletter {
     padding-left: 5%;
-}
+  }
 
-.mobile-email {
+  .mobile-email {
     max-width: 3%;
-}
+  }
 
-.mobile-gallery {
+  .mobile-gallery {
     max-height: 250px;
     max-width: 100%;
     padding: 5% 5% 2% 2%;
     margin: 0%;
-}
+  }
 
-.mobile-caption {
+  .mobile-caption {
     max-width: 100%;
-}
+  }
 
-.galway-po {
+  .galway-po {
     padding-left: 5%;
     padding-bottom: 2%;
-}
+  }
 
-.image-position-bio {
+  .image-position-bio {
     padding: 15% 0% 15% 20%;
-}
+  }
 
-.mobile-image-po {
+  .mobile-image-po {
     padding-left: 10%;
     padding-top: 2%;
-}
+  }
 
-.contact-us {
+  .contact-us {
     padding-bottom: 15%;
-}
+  }
 
-textarea {
+  textarea {
     box-sizing: border-box;
     width: 100%;
-}
+  }
 
-.mobile-label {
+  .mobile-label {
     padding-top: 6%;
-}
-
-
+  }
 }
