--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ footer {
 
 /*----Homepage */
 .home-banner {
-  background-image: url(/workspace/milestone-project-1/assets/images/galway-banner.jpg);
+  background-image: url(../images/galway-banner.jpg);
   background-position: center bottom;
   background-size: cover;
   background-repeat: no-repeat;
