Checking to see if mobile logo now lines up with navigation on live site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -533,6 +533,12 @@ p.contact-font {
         height: 145px;
     }
 
+    .mobile-logo-pos {
+    padding-right: 5%;
+    float: right;
+    height: 50px;
+  }
+
   .galway-po {
     padding-left: 25%;
     padding-bottom: 0%;
