--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -533,12 +533,6 @@ p.contact-font {
         height: 145px;
     }
 
-    .mobile-logo-pos {
-    padding-right: 5%;
-    float: right;
-    height: 50px;
-  }
-
   .galway-po {
     padding-left: 25%;
     padding-bottom: 0%;
@@ -570,9 +564,14 @@ p.contact-font {
     }
 
   .mobile-logo-pos {
-    padding-right: 5%;
+    
     float: right;
     height: 50px;
+  }
+
+  .logo {
+    padding-top: 5%;
+    padding-left: 2%;
   }
 
   .nav-position {
