Added more content the About page to remove placeholder text. Added author bios to the Poetry Page. Added audio files for each poem to the project. Edited content in the Readme file to include additional sources for the bios, images, and audio files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,11 @@ h4 {
   padding-left: 30%;
 }
 
+a.text-link {
+    color: #800000;
+    padding: 0px;
+}
+
 /*----Header */
 
 .row {
@@ -300,6 +305,10 @@ h3.bio-title {
 
 .bio {
   padding-right: 10%;
+}
+
+#poem-bottom-padding {
+    padding-bottom: 50px;
 }
 
 /*----Contact Page */
