Testing a fix for white padding on right side of site on Chrome

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,14 @@ li a i:hover {
 
 
 /*----General Styles */
+
+html,body{
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 body {
   margin: 0;
   padding: 0;
